--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "scripts": {
     "start": "webpack-dev-server --mode development --hot --open",
-    "prebuild": "yarn install",
+    "prebuild": "npm install",
     "build": "webpack"
   },
   "dependencies": {
     "@asgardeo/auth-react": "^2.0.3",
     "@babel/runtime-corejs3": "^7.20.6",
     "@svgr/webpack": "^7.0.0",
+    "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
