--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@asgardeo/auth-react": "^2.0.3",
     "@babel/runtime-corejs3": "^7.20.6",
     "@svgr/webpack": "^7.0.0",
+    "bootstrap": "^5.3.0-alpha3",
+    "font-awesome": "^4.7.0",
+    "less-loader": "^11.1.0",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
@@ -39,7 +42,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
