--- a/package.json
+++ b/package.json
@@ -1,52 +1,34 @@
 {
   "name": "grama-app",
-  "version": "0.1.0",
-  "description": "",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "webpack-dev-server --mode development --hot --open",
-    "prebuild": "npm install",
-    "build": "webpack"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@asgardeo/auth-react": "^2.0.3",
-    "@babel/runtime-corejs3": "^7.20.6",
-    "@svgr/webpack": "^7.0.0",
-    "bootstrap": "^5.3.0-alpha3",
+    "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "less-loader": "^11.1.0",
-    "mobx": "^6.9.0",
-    "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/node": "^20.1.1",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "babel-loader": "^9.1.0",
-    "babel-polyfill": "^6.26.0",
-    "chalk": "^5.2.0",
-    "core-js": "^3.26.1",
-    "css-loader": "^6.7.3",
-    "dev-server-ports": "^2.0.0",
-    "dotenv": "^16.0.3",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.2",
-    "typescript": "^4.9.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2"
   }
 }
