--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-.env
+.env.development
+.env.production
 
 # Editor directories and files
 .vscode/*
@@ -23,3 +24,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Local Netlify folder
+.netlify
