--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && echo /*  /index.html  200 > dist/_redirects",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npm run preview"
+    "build:development": "tsc && vite build --mode development"
   },
   "dependencies": {
     "@asgardeo/auth-react": "^2.0.3",
