--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_ASGARDEO_BASE_URL=""
-VITE_ASGARDEO_CLIENT_ID=""
+VITE_ASGARDEO_BASE_URL="https://api.asgardeo.io/t/org202tx"
+VITE_ASGARDEO_CLIENT_ID="nE6ZlgiqIg61GEwhmvFdwmxjI9Ma"
 VITE_ASGARDEO_SIGN_IN_REDIRECT_URL="http://localhost:3000"
 VITE_ASGARDEO_SIGN_OUT_REDIRECT_URL="http://localhost:3000"
