--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_ASGARDEO_BASE_URL=""
-VITE_ASGARDEO_CLIENT_ID=""
+VITE_ASGARDEO_BASE_URL="https://api.asgardeo.io/t/gramaapp6"
+VITE_ASGARDEO_CLIENT_ID="Wx15xU0lxg8G7GRl1LFCskTmG24a"
 VITE_ASGARDEO_SIGN_IN_REDIRECT_URL="http://localhost:3000/home"
 VITE_ASGARDEO_SIGN_OUT_REDIRECT_URL="http://localhost:3000"
