progile page done

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 VITE_ASGARDEO_BASE_URL=""
 VITE_ASGARDEO_CLIENT_ID=""
-VITE_ASGARDEO_SIGN_IN_REDIRECT_URL="http://localhost:3000"
+VITE_ASGARDEO_SIGN_IN_REDIRECT_URL="http://localhost:3000/home"
 VITE_ASGARDEO_SIGN_OUT_REDIRECT_URL="http://localhost:3000"
